# cvgen-sqlite

./: LICENSE  README.md  pyproject.toml  requirements.txt
sql/: cvgen_ddl.sql  cvgen_ins.sql  ins_countries.sql
src/cvgen_sqlite/: app.py
src/cvgen_sqlite/pages/: 10_Speaking_Engagements.py  11_Generate.py  1_StartHere.py  2_Headline.py  3_Top_Projects.py  4_Work_Experience.py  5_Education.py  6_Certifications.py  7_Skills.py  8_Additional_Activities.py  9_Publications.py
src/cvgen_sqlite/utils/: database.py
templates/: resume_template_en.html  resume_template_nl.html
